<resources>
    <string name="app_name">Android Test 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_what_are_you_looking_for">Welcome!😊 What are you looking for?</string>
    <string name="lead_generation_bots">Lead generation bots</string>
    <string name="multi_step_forms">Multi-step forms</string>
    <string name="integrations">Integrations</string>
    <string name="great_what_department_do_you_work_in">Great! What department do you work in?</string>
    <string name="marketing">Marketing</string>
    <string name="sales">Sales</string>
    <string name="customer_service">Customer service</string>
    <string name="what_is_the_email_and_phone_number_that_we_can_reach_you_the_best">What is the email and phone number that we can reach you the best?</string>
    <string name="email_address">Email address*</string>
    <string name="phone">Phone*</string>
    <string name="next">Next</string>
    <string name="could_you_tell_us_a_bit_more_about_yourself">Could you tell us a bit more about yourself?</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last name*</string>
    <string name="thanks_just_a_few_more_details_and_we_are_done">Thanks!😊 Just a few more details and we are done!</string>
    <string name="company_name">Company name*</string>
    <string name="job_title">Job title*</string>
    <string name="request_demo">Request demo</string>
    <string name="your_data">Your Data:</string>
    <string name="dismiss">Dismiss</string>
    <string name="space"> </string>
</resources>