<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onItemClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".ui.fragments.DepartmentFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/departmentHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/great_what_department_do_you_work_in"
            android:textSize="27sp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/departmentFirstButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/lato_bold"
            android:padding="13dp"
            android:text="@string/marketing"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="22dp"
            android:onClick="@{onItemClick}"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/departmentHeading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/departmentSecondButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            app:cornerRadius="22dp"
            android:textAllCaps="false"
            android:fontFamily="@font/lato_bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:text="@string/sales"
            android:onClick="@{onItemClick}"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/departmentFirstButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/departmentThirdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:padding="13dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="22dp"
            android:layout_marginTop="5dp"
            android:text="@string/customer_service"
            android:onClick="@{onItemClick}"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/departmentSecondButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>