<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onItemClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".ui.fragments.JobFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/jobHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_just_a_few_more_details_and_we_are_done"
            android:textSize="27sp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/box_stroke_color"
            app:layout_constraintTop_toBottomOf="@+id/jobHeading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jobEditCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_name"
                android:inputType="text"
                android:textColorHint="@color/hint_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jobLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/box_stroke_color"
            app:layout_constraintTop_toBottomOf="@+id/companyLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jobEditJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job_title"
                android:inputType="text"
                android:textColorHint="@color/hint_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emailPhoneRequestDemoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/lato_regular"
            android:padding="13dp"
            android:textAllCaps="false"
            android:textSize="19sp"
            app:cornerRadius="22dp"
            android:text="@string/request_demo"
            android:onClick="@{onItemClick}"
            app:layout_constraintTop_toBottomOf="@+id/jobLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>